Adding "Add Action" feature

--- a/popup.html
+++ b/popup.html
@@ -216,9 +216,9 @@
       </table>
     </div>
 
-    <!-- Editable Form for Action Details -->
+    <!-- Edit Action UI -->
     <div id="editForm" style="display: none">
-      <h2>Edit Action</h2>
+      <h2 id="formTitle">Edit Action</h2>
       <label for="actionDropdown">Action</label>
       <select id="actionDropdown">
         <option value="click">Click</option>
