Adding 'custom actions' action option

--- a/popup.html
+++ b/popup.html
@@ -227,6 +227,7 @@
         <option value="select option">Select Option</option>
         <option value="Verify Element Exists">Verify Element Exists</option>
         <option value="Verify Element Text">Verify Element Text</option>
+        <option value="Custom Action">Custom Action</option>
       </select>
       <label for="locatorInput">Web Element Locator</label>
       <input
